--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -116,3 +116,13 @@ nav {
         display: none;
     }
 }
+
+@media (max-width:600px) {
+    .nav-container .logo {
+        font-size: 1.2rem;
+    }
+    .nav-links {
+        width: 70%;
+        margin-right: 7%;
+    }
+}
