--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -119,10 +119,14 @@ nav {
 
 @media (max-width:600px) {
     .nav-container .logo {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
     }
     .nav-links {
         width: 70%;
         margin-right: 7%;
+    }
+    .nav-right {
+        gap: 15px;
+        font-size: 1.5rem;
     }
 }
