--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -31,6 +31,7 @@ nav {
     position: sticky;
     top: 0;
     z-index: 100;
+    background: white;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -87,6 +88,11 @@ nav {
     border-radius: 3rem;
 }
 
+.home-img {
+    width: 100%;
+    height: 700px;
+}
+
 @media (max-width: 1024px) {
     nav {
     height: 90px;
@@ -132,6 +138,9 @@ nav {
     .button-login {
         display: none;
     }
+    .home-img {
+        height: 500px;
+    }
 }
 
 @media (max-width:600px) {
@@ -148,5 +157,8 @@ nav {
     }
     .button-login {
         display: none;
+    }
+    .home-img {
+        height: 250px;
     }
 }
