--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -125,9 +125,9 @@ nav {
     background: #894647;
 }
 
-.home-image {
+/* .home-image {
     float: right;
-}
+} */
 
 @media (max-width: 1024px) {
     .container {
@@ -211,6 +211,55 @@ nav {
     .shop-button:hover {
         background: #894647;
     }
+    .home-section {
+        margin-top: 4rem;
+    }
+    .section-p {
+        font-size: 2rem;
+        font-weight: 600;
+        text-transform: capitalize;
+    }
+    .section-p-p {
+        font-weight: 400;
+        line-height: 3.5;
+    }
+    .section-button {
+        border: none;
+        background: #C69D5F;
+        padding: 0.8rem 2rem 0.8rem 2rem;
+        color: white;
+        font-size: medium;
+        cursor: pointer;
+        text-transform: uppercase;
+    }
+    .section-button:hover {
+        background: white;
+        color: #C69D5F;
+        border: 2px solid #C69D5F;
+    } 
+    .container-section {
+        display: flex;
+        position: relative; /* Allow absolute positioning inside */
+    }
+    .image-wrapper {
+        position: relative;
+    }
+    .home-image {
+        max-width: 80%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    /* Background color only at the bottom */
+    .background-bottom {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 200px; 
+        background-color: #E7EFF4; 
+        z-index: 0; /* Keep background behind the image */
+    }
+      
 }
 
 @media (max-width:600px) {
