--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -312,6 +312,20 @@ nav {
     .home-section1 {
         display: none;
     }
+    .home-product-tag{
+        margin-top: 6rem;
+    }
+    .home-product-list {
+        margin-top: 3rem;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+    }
+    .product-item {
+        margin-bottom: -60px;
+    }
+    .home-product-img {
+        width: 99%;
+    }
       
 }
 
@@ -380,5 +394,18 @@ nav {
     }
     .background-bottom {
         height: 80px; 
+    }
+    .home-product-tag{
+        margin-top: 4rem;
+        text-transform: uppercase;
+        font-size: 1.6rem;
+    }
+    .home-product-list {
+        margin-top: 2.5rem;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+    .product-item {
+        margin-bottom: -15px;
     }
 }
