--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -212,6 +212,47 @@ nav {
     width: 95%;
     height: 70%;
 }
+.home-tag {
+    display: flex;
+    background: #F7F6F9;
+    margin-top: 3rem;
+    height: 650px;
+}
+.home-tag-section {
+    margin-left: 4rem;
+}
+.home-tag-p {
+    font-size: 4rem;
+    margin-top: 12rem;
+    width: 100%;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+.home-tag-p-p {
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 4;
+}
+.home-tag-button {
+    padding: 0.8rem 2rem 0.8rem 2rem;
+    font-size: medium;
+    cursor: pointer;
+    text-transform: uppercase;
+    background: white;
+    color: #C69D5F;
+    border: 2px solid #C69D5F;
+}
+.home-tag-button:hover {
+    border: none;
+    background: #C69D5F;
+    color: white;
+}
+.home-tag-img {
+    width: 100%;
+    margin-top: 2rem;
+    margin-left: 8rem;
+    height: 90%;
+}
 
 @media (max-width: 1024px) {
     .container {
@@ -334,6 +375,9 @@ nav {
         width: 90%;
         margin: 0 auto;
     }
+    .nav-container {
+        width: 90%;
+    }
     .nav-container .logo {
         font-size: 1.1rem;
     }
@@ -403,9 +447,12 @@ nav {
     .home-product-list {
         margin-top: 2.5rem;
         grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
+        gap: 30px;
     }
     .product-item {
         margin-bottom: -15px;
+    }
+    .home-product-img {
+        width: 100%;
     }
 }
