--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -367,6 +367,28 @@ nav {
     .home-product-img {
         width: 99%;
     }
+    .home-tag {
+        height: 450px;
+    }
+    .home-tag-section {
+        margin-left: 2rem;
+    }
+    .home-tag-p {
+        font-size: 2rem;
+        margin-top: 9rem;
+        width: 100%;
+        font-weight: 500;
+        text-transform: capitalize;
+    }
+    .home-tag-p-p {
+        font-size: 1rem;
+    }
+    .home-tag-img {
+        width: 100%;
+        margin-top: 3.5rem;
+        margin-left: 5rem;
+        height: 80%;
+    }
       
 }
 
