--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -253,6 +253,28 @@ nav {
     margin-left: 8rem;
     height: 90%;
 }
+.home-blog {
+    width: 100%;
+}
+.home-blog-p {
+    text-align: center;
+    margin-top: 8rem;
+    font-size: 2rem;
+    text-transform: uppercase;
+}
+.home-blog-list {
+    margin-top: 3rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+.home-blog-img {
+    width: 95%;
+    height: 80%;
+}
+/* .home-blog-list-resp {
+    display: none;
+} */
 
 @media (max-width: 1024px) {
     .container {
@@ -387,6 +409,22 @@ nav {
         width: 100%;
         margin-top: 3.5rem;
         margin-left: 5rem;
+        height: 80%;
+    }
+    .home-blog-list {
+        display: none;
+    }
+    .home-blog-p {
+        margin-top: 6rem;
+    }
+    .home-blog-list-resp {
+        width: 100%;
+        display: flex;
+        margin-top: 3rem;
+        gap: 30px;
+    }
+    .home-blog-img {
+        width: 100%;
         height: 80%;
     }
       
