--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -443,6 +443,9 @@ nav {
         width: 100%;
         height: 80%;
     }
+    .home-blog-list-mob {
+        display: none;
+    }
       
 }
 
@@ -565,10 +568,12 @@ nav {
     }
     .home-blog-p {
         margin-top: 4rem;
+        font-size: 1.6rem;
+        margin-bottom: 2rem;
     }
     .home-blog-list-mob {
+        display: inline;
         max-width: 100%;
-        margin-top: 1.5rem;
     }
     .blog-item {
         margin-bottom: 2rem;
@@ -579,5 +584,8 @@ nav {
     }
     .home-blog-tag {
         margin-top: 0.5rem;
+    }
+    .home-blog-title {
+        font-size: 1.2rem;
     }
 }
