--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -717,4 +717,37 @@ li {
     .home-blog-title {
         font-size: 1.2rem;
     }
+    footer {
+        margin-top: 6rem;
+        height: 112vh;
+    }
+    .footer {
+        margin-top: 1.5rem;
+    }
+    .footer-sections {
+        display: block;
+        text-align: center;
+        margin-top: 2rem;
+    }
+    .footer-header {
+        font-size: 1.3rem;
+    }
+    .footer-section-p {
+        font-size: 0.85rem;
+    }
+    .footer-section-resp {
+        text-transform: capitalize;
+    }
+    .footer-head {
+        font-size: 1.2rem;
+        margin-bottom: 1.2rem;
+        margin-top: 2rem;
+    }
+    .footer-sections li {
+        line-height: 2.5;
+        font-size: 0.8rem;
+    }
+    .footer-last {
+        font-size: 0.7rem;
+    }
 }
