--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -207,10 +207,14 @@ nav {
 }
 .product-item {
     margin-bottom: -50px;
+    cursor: pointer;
 }
 .home-product-img {
     width: 95%;
     height: 70%;
+}
+.home-product-img:hover {
+    transform: scale(1.05);
 }
 .home-tag {
     display: flex;
@@ -367,6 +371,16 @@ li {
     top: 15%;
     font-size: 1.2rem;
     text-align: center;
+}
+
+.cart-button {
+    position: relative;
+    left: 20%;
+    border: none;
+    background: #C69D5F;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
 }
 
 @media (max-width: 1024px) {
