--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -423,11 +423,32 @@ th {
     text-align: center;
     font-weight: 400;
 }
-.table-product-name {
+td {
+    border: 1px solid rgb(229, 225, 225);
+}
+.table-head-name {
     text-align: left;
 }
-
-  
+.table-product {
+    display: flex;
+    align-items: center;
+}
+.table-product img {
+    width: 100px;
+    height: 100px;
+    margin: 1rem 1rem;
+}
+.table-product p {
+    margin-left: 2rem;
+}
+.table-tr {
+    text-align: center;
+}
+.table-quantity button {
+    border: 1px solid rgb(210, 209, 209);
+    padding: 0.1rem 0.8rem 0.1rem 0.8rem;
+    background: none;
+} 
 
 @media (max-width: 1024px) {
     .container {
