--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -674,6 +674,13 @@ td {
         top: 14%;
         font-size: 1rem;
     }
+
+    .cart-item-section {
+        width: 90%;
+    }
+    .table-quantity button {
+        padding: 0rem 0.5rem 0rem 0.5rem;
+    }
       
 }
 
