--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -933,7 +933,10 @@ td {
     .cart-mobile h3 {
         text-align: center;
         font-size: 1.5rem;
-        color: #999;
+        font-weight: 500;
+    }
+    .delete-cart-item {
+        margin-bottom: -2.2rem;
     }
       
       /* Additional adjustments for price and subtotal */
