modifications in cart quantity and add to cart

--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -477,6 +477,9 @@ td {
     margin-top: 1rem;
     color: rgb(97, 96, 96);
 }
+.product-cart {
+    display: flex;
+}
 
 @media (max-width: 1024px) {
     .container {
