--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -532,7 +532,7 @@ td {
 }
 
 .productpage-header {
-    background: #9E9EA0;
+    background: #A1A1A1;
     height: 10rem;
     align-items: center;
 }
@@ -571,13 +571,7 @@ td {
     margin-bottom: -20px;
     cursor: pointer;
 }
-.home-product-img {
-    width: 95%;
-    height: 70%;
-}
-.home-product-img:hover {
-    transform: scale(1.05);
-}
+
 
 @media (max-width: 1024px) {
     .container {
@@ -825,7 +819,28 @@ td {
         width: 50%;
         height: 25rem;
     }
-    
+
+    .productpage-header {
+        height: 9rem;
+    }
+    .productpage-header h1 {
+        top: 18%;
+    }
+    .productpage-p {
+        top: 22%;
+    }
+    .product-list {
+        width: 90%;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 30px;
+    }
+    .product-item {
+        margin-bottom: -5px;
+    }
+    .home-product-img {
+        width: 100%;
+        height: 70%;
+    }
       
 }
 
@@ -1008,6 +1023,15 @@ td {
         top: 14%;
         font-size: 1rem;
     }
+    .cart-button {
+        position: relative;
+        left: 5%;
+        border: none;
+        background: #C69D5F;
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        cursor: pointer;
+    }
 
     .cart-header-p {
         width: 90%;
@@ -1130,6 +1154,26 @@ td {
     .product-addcart {
         padding: 0.8rem 3.4rem 0.8rem 3.4rem ;
         font-size: 1rem;
+    }
+
+    .productpage-header {
+        height: 8rem;
+    }
+    .productpage-header h1 {
+        font-size: 1.8rem;
+    }
+    .product-list {
+        width: 90%;
+        margin-top: 3rem;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px;
+    }
+    .product-item {
+        margin-bottom: -5px;
+    }
+    .home-product-img {
+        width: 100%;
+        height: 70%;
     }
     
       
