--- a/coffee-shop/src/App.css
+++ b/coffee-shop/src/App.css
@@ -936,6 +936,10 @@ td {
         width: 100%;
         height: 70%;
     }
+
+    .signup-box {
+        width: 50%;
+    }
       
 }
 
@@ -1264,6 +1268,8 @@ td {
         gap: 30px;
     }
     
-      
+    .signup-box {
+        width: 80%;
+    } 
     
 }
